# parsewiz

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt
backend/: config.py  main.py
backend/converters/: __init__.py  json_to_csv.py  json_to_excel.py
backend/utils/: __init__.py  security.py
doc/: DEPLOYMENT.md  DISTRIBUTION.md  PHASE0.md  PHASE1.md  PHASE2.md  ROADMAP.md  SEO.md  SPEC.md  SPECIFICATIONS.md  STACK.md
doc/tasks/: todo.md
frontend/: app.js  index.html  manifest.json  robots.txt  sitemap.xml  styles.css  sw.js
tasks/: csv-to-json-unflatten.md  todo.md  ux-improvements.md
tests/: conftest.py  test_api.py  test_json_to_csv.py  test_json_to_excel.py
tests/sample_files/: complex_products.json  complex_products_v2.json
