[project]
name = "data-toolkit"
version = "0.1.0"
description = "Web tool for conversion, cleaning, and manipulation of tabular data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "pandas>=2.2.0",
    "openpyxl>=3.1.2",
    "xlrd>=2.0.1",
    "httpx>=0.26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
]
